// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` with full pbehavior 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div>
          <strong>Periodic behaviors</strong>
          <div>
            <div class=\\"mt-2 font-weight-bold\\">pbehavior-name</div><div>Author: pbehavior-author</div><div>Type: type-name</div><div>Reason: pbehavior-reason-name</div><div>
        Last comment:
        <div class=\\"ml-2\\">
          -&nbsp;
          [object Object]:&nbsp;
          pbehavior-comment-1-message
        </div>
      </div>
          </div>
        </div>"
    top=""
  >
    <c-alarm-pbehavior-chip-stub
      color="color"
      icon="icon-name"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without comment 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div>
          <strong>Periodic behaviors</strong>
          <div>
            <div class=\\"mt-2 font-weight-bold\\">pbehavior-name</div><div>Author: pbehavior-author</div><div>Type: type-name</div><div>Reason: pbehavior-reason-name</div>
          </div>
        </div>"
    top=""
  >
    <c-alarm-pbehavior-chip-stub
      color="color"
      icon="icon-name"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without comment author 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div>
          <strong>Periodic behaviors</strong>
          <div>
            <div class=\\"mt-2 font-weight-bold\\">pbehavior-name</div><div>Author: pbehavior-author</div><div>Type: type-name</div><div>Reason: pbehavior-reason-name</div><div>
        Last comment:
        <div class=\\"ml-2\\">
          -&nbsp;
          [object Object]:&nbsp;
          pbehavior-comment-1-message
        </div>
      </div>
          </div>
        </div>"
    top=""
  >
    <c-alarm-pbehavior-chip-stub
      color="color"
      icon="icon-name"
    />
  </c-simple-tooltip-stub>
</div>
`;

exports[`extra-details-pbehavior Renders \`extra-details-pbehavior\` without reason 1`] = `
<div>
  <c-simple-tooltip-stub
    content="<div>
          <strong>Periodic behaviors</strong>
          <div>
            <div class=\\"mt-2 font-weight-bold\\">pbehavior-name</div><div>Author: pbehavior-author</div><div>Type: type-name</div><div>
        Last comment:
        <div class=\\"ml-2\\">
          -&nbsp;
          [object Object]:&nbsp;
          pbehavior-comment-1-message
        </div>
      </div>
          </div>
        </div>"
    top=""
  >
    <c-alarm-pbehavior-chip-stub
      color="color"
      icon="icon-name"
    />
  </c-simple-tooltip-stub>
</div>
`;
